# demo-gpt

./: .env.example  .gitignore  Dockerfile  Dockerfile.zero  README.md  pyproject.toml  render-zero.yaml  render.yaml
.github/workflows/: ci.yml  scratch-ci.yml
data/: evals.jsonl
prompts/: active.json
scratch/: README.md  __init__.py  data.py  download_gutenberg.py  generate.py  model.py  prepare_corpus.py  requirements.txt  tokenizer.py  train.py
scratch/configs/: growth_plan.json  level1_english_19m.json  level2_english_38m.json  smoke_cpu.json
src/: sitecustomize.py
src/second_brain/: __init__.py  cli.py  config.py  core.py  cpu_budget.py  evaluation.py  improvement.py  llm.py  memory.py  prompt_store.py  training_orchestrator.py  web.py  zero_runtime.py
src/second_brain/static/: app.js  index.html  styles.css  zero-connection-guard.js  zero.css  zero.html  zero.js
tests/: test_cpu_budget.py  test_evaluation.py  test_scratch_model.py  test_web.py
