[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "second-brain"
version = "0.2.0"
description = "A controlled self-improving AI agent with memory, evals, candidate prompts, and promotion gates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "openai>=1.68.0,<3",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
second-brain = "second_brain.cli:main"
second-brain-web = "second_brain.web:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
second_brain = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
